examples/test/testpolicy5148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5148
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key23: value28
      key49: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value32
      podSelector:
        matchLabels:
          key34: value6
          key47: value47
          key35: value49
